--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 <body>
     <div id="app"></div>
     <script src="app.js"></script>
+    <script src="mouse-move-listener.js"></script>
 </body>
 </html>
