--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Docs</title>
-</head>
-<body>
-    <div id="app"></div>
-    <script src="app.js"></script>
-    <script src="mouse-move-listener.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+        <title>React ItemStack</title>
+    </head>
+    <body>
+        <div id="app"></div>
+
+        <script src="app.js"></script>
+    </body>
 </html>
